Fix dark mode BG not covering entire background

--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,11 @@ body {
 }
 
 html.dark #root {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0) !important;
 }
 
 @media (prefers-color-scheme: dark) {
   #root {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0) !important;
   }
 }
